tests/fixtures/invalid/min_set_bool.py
# Cannot call min() with Set[int], Bool
x = min({1, 2, 3}, True)
